--- a/api/gradle/wrapper/gradle-wrapper.properties
+++ b/api/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,4 @@
+#Thu Aug 21 22:08:12 CDT 2025
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.3-bin.zip
