--- a/ui/package.json
+++ b/ui/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
+    "bootstrap-icons": "^1.13.1",
     "pinia": "^3.0.3",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
