--- a/ui/tsconfig.app.json
+++ b/ui/tsconfig.app.json
@@ -4,7 +4,8 @@
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
-
+    "composite": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
