--- a/ui/tsconfig.node.json
+++ b/ui/tsconfig.node.json
@@ -12,8 +12,10 @@
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
 
-    "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "module": "ES2020",
+    "target": "ES2020",
+    "moduleResolution": "node",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "types": ["node"],
     "allowJs": false
   }
