--- a/ui/tsconfig.node.json
+++ b/ui/tsconfig.node.json
@@ -9,14 +9,12 @@
     "eslint.config.*"
   ],
   "compilerOptions": {
+    "composite": true,
     "noEmit": true,
-    "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
-    "module": "ES2020",
-    "target": "ES2020",
-    "moduleResolution": "node",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "types": ["node"],
-    "allowJs": false
+    "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "types": ["node"]
   }
 }
